--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "chart.js": "^4.3.0",
     "pinia": "^2.0.36",
     "roboto-fontface": "*",
     "vue": "^3.3.2",
