--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "pinia": "^2.0.36",
     "roboto-fontface": "*",
     "vue": "^3.3.2",
