--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.0.36",
     "roboto-fontface": "*",
     "vue": "^3.3.2",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.0",
     "vuetify": "^3.0.0-beta.0",
     "webfontloader": "^1.0.0"
