--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "pinia": "^2.0.36",
     "roboto-fontface": "*",
+    "vee-validate": "^4.9.6",
     "vue": "^3.3.2",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.2.0",
